--- a/test6/styletop1000.css
+++ b/test6/styletop1000.css
@@ -49,7 +49,7 @@ ul {
   margin: 0 0 0 0;
 }
 
-@media screen and (min-width:1000px){
+
   .top{
     text-align: center;
     width:95%;
@@ -130,7 +130,6 @@ ul {
   .topbox4 > p{
     font-size: 20px;
   }
-}
 .nbox{
   margin-left: 5%;
   margin-right: 5%;
@@ -149,7 +148,7 @@ ul {
 }
 .about > img{
   width: 40%;
-  height: 40%;
+  height: auto;
   float: right;
 }
 
