absoluteとかの  テスト

--- a/test6/styletop0.css
+++ b/test6/styletop0.css
@@ -26,7 +26,7 @@ ul {
 }
 
 .title{
-  width: 40%;
+  width: auto;
   background: lime;
 }
 .title > h1 > a{
@@ -63,7 +63,7 @@ ul {
     margin-left: 3%;
     margin-bottom: 3%;
     width: 42%;
-    height: 30%;
+    height: auto;
     float:left;
     background: #f8cbad;
   }
@@ -80,9 +80,10 @@ ul {
     border: solid 2px #1f4e79;
     margin-right: 3%;
     margin-bottom: 3%;
+    padding-bottom: 6%;
     background: #bdd7ee;
     width: 42%;
-    height: 30%;
+    height: auto;
     float:right;
   }
   .topbox2 > h1{
@@ -99,7 +100,7 @@ ul {
     margin-left: 3%;
     margin-bottom: 3%;
     width: 42%;
-    height: 30%;
+    height: auto;
     float:left;
     background: #c5e0b4;
   }
@@ -118,7 +119,7 @@ ul {
     margin-right: 3%;
     margin-bottom: 3%;
     width: 42%;
-    height: 30%;
+    height: auto;
     float:right;
   }
   .topbox4 > h1{
