--- a/test6/styletop1000.css
+++ b/test6/styletop1000.css
@@ -25,15 +25,21 @@ ul {
   list-style: none;
 }
 
+
 .title{
-  float: left;
-  width: 40%;
   background: red;
+  position: relative;
+  height: 80px;
 }
-.title > h1 > a{
+.titlechar{
+  width: auto;
+  position: absolute;
+}
+.titlechar > h1 > a{
   font-size:50px;
   text-decoration: none;
   color: black;
+
 }
 .title_info{
   font-size: 20px;
@@ -42,22 +48,36 @@ ul {
 .title_info_box{
   padding: 0 30 0 0;
   margin: -20 0 0 0;
-  float:left;
+  position: absolute;
+  left: 40%;
 }
 
 .title_info_box_2{
   padding: 0 0 0 0;
   margin: 0 0 0 0;
+  position: absolute;
+  left: 75%;
 }
-
+.title_info_box_2 > ul > li > a1 > a{
+  background: black;
+  border-radius: 10px;
+  color: #ffffff;
+}
+.title_info_box_2 > ul > li > a2 > a{
+  background: black;
+  border-radius: 10px;
+  color: #666666;
+  margin-top: 10px;
+}
 
   .top{
     text-align: center;
-    width:95%;
-    height: 70%;
+    width:90%;
+    height: 400px;
     /*margin: 30 30 30 30;*/
     padding-left: 3%;
     padding-right: 3%;
+    position: relative;
   }
   .topbox1{
     border-radius: 20px;
@@ -65,9 +85,11 @@ ul {
     margin-left: 3%;
     margin-bottom: 3%;
     width: 42%;
-    height: 40%;
-    float:left;
+    height: auto;
     background: #f8cbad;
+    position: absolute;
+    top: 5%;
+    left: 0%;
   }
   .topbox1 > h1{
     font-size: 36px;
@@ -84,8 +106,10 @@ ul {
     margin-bottom: 3%;
     background: #bdd7ee;
     width: 42%;
-    height: 40%;
-    float:right;
+    height: auto;
+    position: absolute;
+    top: 5%;
+    right: 0%;
   }
   .topbox2 > h1{
     font-size: 36px;
@@ -101,9 +125,11 @@ ul {
     margin-left: 3%;
     margin-bottom: 3%;
     width: 42%;
-    height: 40%;
-    float:left;
+    height: auto;
     background: #c5e0b4;
+    position: absolute;
+    bottom: 5%;
+    left: 0%;
   }
   .topbox3 > h1{
     font-size: 36px;
@@ -120,8 +146,10 @@ ul {
     margin-right: 3%;
     margin-bottom: 3%;
     width: 42%;
-    height: 40%;
-    float:right;
+    height: auto;
+    position: absolute;
+    bottom: 5%;
+    right: 0%;
   }
   .topbox4 > h1{
     font-size: 36px;
@@ -144,7 +172,7 @@ ul {
   margin-left: 5%;
 }
 .about > p{
-  font-size: 25px;
+  font-size: 20px;
   margin: 20 0 20 0;
 }
 .about > img{
