--- a/test6/styletop1000.css
+++ b/test6/styletop1000.css
@@ -27,7 +27,8 @@ ul {
 
 
 .title{
-  background: red;
+  background: #2ECCFA;
+  border-radius: 10px;
   position: relative;
   height: 80px;
 }
@@ -63,14 +64,12 @@ ul {
   background: black;
   border-radius: 10px;
   color: #ffffff;
-  margin-bottom: 20px;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 .title_info_box_2 > a2 > p > a{
   background: black;
   border-radius: 10px;
-  color: #666666;
-  margin-top: 10px;
+  color: #ffffff;
 }
 
   .top{
@@ -171,7 +170,7 @@ ul {
 }
 
 .about{
-  width: 90%;
+  width: 100%;
   margin-left: 5%;
 }
 .about > p{
