スマホで見てみたい三回目っ

--- a/test6/styletop1000.css
+++ b/test6/styletop1000.css
@@ -3,7 +3,7 @@
 @-ms-viewport {width: device-width;}
 
 .body {
-  font-family: '游ゴシック',Yugothic, 'メイリオ',
+  font-family: '游ゴシック','Yugothic', 'メイリオ',
   'Hiragino Kaku Gothic Pro', sans-serif;
   background-color: #ff1111;
   /*position: absolute;*/
@@ -231,6 +231,7 @@ ul {
 
 .footer{
     background: #eeeeee;
+    height: auto;
 }
 .footer > p1{
   float:left;
