--- a/test6/styletop750.css
+++ b/test6/styletop750.css
@@ -3,7 +3,7 @@
 @-ms-viewport {width: device-width;}
 
 .body {
-  font-family: '游ゴシック',Yugothic, 'メイリオ',
+  font-family: '游ゴシック','Yugothic', 'メイリオ',
   'Hiragino Kaku Gothic Pro', sans-serif;
   background-color: #ff1111;
   /*position: absolute;*/
@@ -213,6 +213,8 @@ ul {
 
 .footer{
     background: #eeeeee;
+    height: auto;
+    font-size: 13px;
 }
 .footer > p1{
   float:left;
