--- a/test6/styletop750.css
+++ b/test6/styletop750.css
@@ -33,18 +33,19 @@ ul {
 }
 .titlechar{
   width: 100%;
-  font-size: auto;
 }
 .titlechar > h1 > a{
-  font-size:40px;
+  font-size: 50px;
+  font-size: 10vw;
   text-decoration: none;
   color: black;
 }
 .title_info{
   font-size: 20px;
+  font-size: 5vw;
 }
 .title_info_box{
-  padding: 0 30 0 0;
+  padding: 0 0 0 0;
   margin: -20 0 0 0;
   left: 40%;
 }
@@ -89,11 +90,13 @@ ul {
   }
   .topbox1 > h1{
     font-size: 36px;
+    font-size: 10vw;
     margin-top: 3%;
     margin-bottom: 5%;
   }
   .topbox1 > p{
     font-size: 20px;
+    font-size : 5vw;
   }
   .topbox2{
     border-radius: 20px;
@@ -105,11 +108,13 @@ ul {
   }
   .topbox2 > h1{
     font-size: 36px;
+    font-size: 10vw;
     margin-top: 3%;
     margin-bottom: 5%;
   }
   .topbox2 > p{
     font-size: 20px;
+    font-size: 5vw;
   }
   .topbox3{
     border-radius: 20px;
@@ -121,11 +126,13 @@ ul {
   }
   .topbox3 > h1{
     font-size: 36px;
+    font-size: 10vw;
     margin-top: 3%;
     margin-bottom: 5%;
   }
   .topbox3 > p{
     font-size: 20px;
+    font-size: 5vw;
   }
   .topbox4{
     border-radius: 20px;
@@ -137,11 +144,13 @@ ul {
   }
   .topbox4 > h1{
     font-size: 36px;
+    font-size: 10vw;
     margin-top: 3%;
     margin-bottom: 5%;
   }
   .topbox4 > p{
     font-size: 20px;
+    font-size: 5vw;
   }
 .nbox{
   margin-left: 5%;
@@ -150,6 +159,7 @@ ul {
 }
 .nbox > h1{
   font-size: 40px;
+  font-size: 10vw;
 }
 
 .about{
@@ -158,6 +168,7 @@ ul {
 }
 .about > p{
   font-size: 20px;
+  font-size: 3vw;
   margin: 20 0 20 0;
 }
 .about > img{
@@ -175,14 +186,17 @@ ul {
 }
 .join > p > b{
   font-size: 20px;
+  font-size: 6vw;
 }
 .join > p > b1{
   font-weight:bolder;
   font-size: 16px;
+  font-size: 4vw;
 }
 
 .link{
-  font-size: 30px;
+  font-size: 25px;
+  font-size: 5vw;
   margin-bottom: 100px;
 }
 
@@ -191,6 +205,7 @@ ul {
 }
 .map > p{
   font-size: 20px;
+  font-size: 5vw;
 }
 
 .ggmap {
@@ -215,6 +230,7 @@ ul {
     background: #eeeeee;
     height: auto;
     font-size: 13px;
+    font-size: 3vw;
 }
 .footer > p1{
   float:left;
