--- a/test6/styletop750.css
+++ b/test6/styletop750.css
@@ -178,11 +178,14 @@ ul {
 
 .join {
   border: solid 2px #000000;
-  width: 70%;
+  width: 90%;
   margin : 0 auto;
   margin-top: 50px;
   margin-bottom: 50px;
   padding : 10 10 10 10 ;
+}
+.join > p{
+  font-size: 4vw;
 }
 .join > p > b{
   font-size: 20px;
@@ -191,7 +194,7 @@ ul {
 .join > p > b1{
   font-weight:bolder;
   font-size: 16px;
-  font-size: 4vw;
+  font-size: 6vw;
 }
 
 .link{
@@ -202,6 +205,9 @@ ul {
 
 .map{
   padding-left: 5%;
+}
+.map{
+  font-size: 4vw;
 }
 .map > p{
   font-size: 20px;
