--- a/test13/css/top.css
+++ b/test13/css/top.css
@@ -16,11 +16,11 @@
   margin-top: 1%;
 }
 #time{
-  margin-top: 1%;
+  margin-top: 1.3%;
   margin-left: 2%;
 }
 #place{
-  margin-top: 1%;
+  margin-top: 1.3%;
   margin-left: 2%;
 }
 #topbotton1{
@@ -47,15 +47,16 @@
 
 #about1{
   margin-top: 3%;
-  margin-bottom: 3%;
-  padding-top: 5%;
+  margin-bottom: 7%;
 }
 #about1_content{
   margin-left: 1%;
   margin-bottom: 3%;
 }
+#about1_title{
+  margin-bottom: 2%;
+}
 #about1_p{
-    margin-top: 5%;
 }
 #about1_pic{
   width: 100%;
@@ -63,14 +64,13 @@
 }
 #about2{
   margin-top: 3%;
-  margin-bottom: 3%;
-  padding-top: 5%;
+  margin-bottom: 7%;
 }
 #about2_content{
   margin-left: 1%;
 }
-#about2_p{
-  margin-top: 5%;
+#about2_title{
+  margin-bottom: 2%;
 }
 #about2_pic{
   width: 100%;
@@ -79,13 +79,12 @@
 #about3{
   margin-top: 3%;
   margin-bottom: 3%;
-  padding-top: 5%;
 }
 #about3_content{
   margin-left: 1%;
 }
-#about3_p{
-  margin-top: 5%;
+#about3_title{
+  margin-bottom: 2%;
 }
 #about3_pic{
   width: 100%;
@@ -104,14 +103,14 @@
     padding-top: 30px;
     height: 0;
     overflow: hidden;
+    margin-bottom: 4%;
 }
 .ggmap iframe,
 .ggmap object,
 .ggmap embed {
-  padding-left: 5%;
   position: absolute;
   top: 0;
   left: 0;
-  width: 85%;
+  width: 100%;
   height: 100%;
 }
