--- a/test15/css/top.css
+++ b/test15/css/top.css
@@ -45,6 +45,13 @@
   text-align: center;
 }
 
+#news{
+  background: #CAE7F2;
+  margin-bottom: 0;
+  padding-top: 2%;
+  padding-bottom: 0;
+}
+
 #about1{
   margin-top: 3%;
   margin-bottom: 7%;
