--- a/test16/css/top.css
+++ b/test16/css/top.css
@@ -45,6 +45,25 @@
   text-align: center;
 }
 
+#news{
+  background: #CAE7F2;
+  margin-bottom: 0;
+  padding-top: 2%;
+  padding-bottom: 0;
+}
+#news_content{
+  margin : 0 0 0 0;
+  padding : 0 0 0 0;
+}
+#news_pic{
+  width : 50%;
+  height : auto;
+  margin : 0 0 0 0;
+  padding : 0 0 0 0;
+  margin-left : 30%;
+
+}
+
 #about1{
   margin-top: 3%;
   margin-bottom: 7%;
